# test_agrobot_rl_navigation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  car_dynamics.py  car_obstacles.py  env_playground.ipynb  env_train.ipynb  envs.py  mypy.ini  playground.ipynb  profile_output  pyproject.toml  robot_obstacles_class.py  robot_obstacles_env.py  robot_util_class.py  solve_env.ipynb
.github/workflows/: code_format.yml  linting.yml  ruff.yml  type_check.yml
continuous_env/: car_dynamics.py  car_obstacles.py  discrete_obstacles.py  robot_dynamics.py  robot_obstacles.py
discrete_env/: robot_obstacles_class.py  robot_obstacles_env.py  robot_util_class.py  solve_env.ipynb
docs/: TODO.md
logs/PPO_1/: events.out.tfevents.1738993683.ACE-OF-NLIN2.316958.0
logs/PPO_2/: events.out.tfevents.1738993700.ACE-OF-NLIN2.316958.1
logs/PPO_3/: events.out.tfevents.1738993738.ACE-OF-NLIN2.316958.2
logs/PPO_4/: events.out.tfevents.1738993775.ACE-OF-NLIN2.316958.3
logs/PPO_5/: events.out.tfevents.1738994057.ACE-OF-NLIN2.6514.0
util/: a_star_search.py  astar_search.py  maze_generator.py  maze_helpers.py
